Update vm route
